Apply suggestions from SonarLint